// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sql Should parse simple sql as select (SELECT column as col1): as select 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "column",
                },
              ],
            },
            Object {
              "tag": "As",
              "value": Object {
                "tag": "Identifier",
                "value": "col1",
              },
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql cast (SELECT CAST(id AS int4)): cast 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "Cast",
              "type": Object {
                "tag": "type",
                "value": "int4",
              },
              "value": Object {
                "tag": "identifier",
                "value": Array [
                  Object {
                    "tag": "Identifier",
                    "value": "id",
                  },
                ],
              },
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql cast number (SELECT CAST(20 AS int4)): cast number 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "Cast",
              "type": Object {
                "tag": "type",
                "value": "int4",
              },
              "value": Object {
                "tag": "Number",
                "value": "20",
              },
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql cast string (SELECT CAST('test' AS varchar(20))): cast string 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "Cast",
              "type": Object {
                "param": "20",
                "tag": "type",
                "value": "varchar",
              },
              "value": Object {
                "tag": "String",
                "value": "test",
              },
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql column select (SELECT column): column select 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "column",
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql comments (-- test
SELECT "test"
-- other
): comments 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "test",
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql const select (SELECT '2018-01-01'): const select 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "String",
              "value": "2018-01-01",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql cross join (SELECT * FROM jobs CROSS JOIN test1): cross join 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "From",
      "values": Array [
        Object {
          "tag": "FromListItem",
          "values": Array [
            Object {
              "tag": "QualifiedIdentifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "jobs",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "Join",
      "values": Array [
        Object {
          "tag": "JoinType",
          "value": "CROSS",
        },
        Object {
          "tag": "QualifiedIdentifier",
          "value": Array [
            Object {
              "tag": "Identifier",
              "value": "test1",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql deep multiple columns select (SELECT column1, table1.column2, table1.column3, schema.table3.colum2): deep multiple columns select 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "column1",
                },
              ],
            },
          ],
        },
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "table1",
                },
                Object {
                  "tag": "Identifier",
                  "value": "column2",
                },
              ],
            },
          ],
        },
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "table1",
                },
                Object {
                  "tag": "Identifier",
                  "value": "column3",
                },
              ],
            },
          ],
        },
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "schema",
                },
                Object {
                  "tag": "Identifier",
                  "value": "table3",
                },
                Object {
                  "tag": "Identifier",
                  "value": "colum2",
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql deep qualified column select (SELECT schema.table.column): deep qualified column select 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "schema",
                },
                Object {
                  "tag": "Identifier",
                  "value": "table",
                },
                Object {
                  "tag": "Identifier",
                  "value": "column",
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql deep qualified star select (SELECT table1.table2.*): deep qualified star select 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "table1",
                },
                Object {
                  "tag": "Identifier",
                  "value": "table2",
                },
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql deep quoted star select (SELECT "table 1"."table 2".*): deep quoted star select 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "table 1",
                },
                Object {
                  "tag": "Identifier",
                  "value": "table 2",
                },
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql deeper quoted star select (SELECT "table 1".table2."table 3".*): deeper quoted star select 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "table 1",
                },
                Object {
                  "tag": "Identifier",
                  "value": "table2",
                },
                Object {
                  "tag": "Identifier",
                  "value": "table 3",
                },
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql except (SELECT * FROM table1 EXCEPT SELECT * FROM table2): except 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "From",
      "values": Array [
        Object {
          "tag": "FromListItem",
          "values": Array [
            Object {
              "tag": "QualifiedIdentifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "table1",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "EXCEPT",
      "values": Array [
        Object {
          "tag": "SelectList",
          "values": Array [
            Object {
              "tag": "Item",
              "values": Array [
                Object {
                  "tag": "identifier",
                  "value": Array [
                    Object {
                      "tag": "star",
                    },
                  ],
                },
              ],
            },
          ],
        },
        Object {
          "tag": "From",
          "values": Array [
            Object {
              "tag": "FromListItem",
              "values": Array [
                Object {
                  "tag": "QualifiedIdentifier",
                  "value": Array [
                    Object {
                      "tag": "Identifier",
                      "value": "table2",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql from (SELECT * FROM jobs): from 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "From",
      "values": Array [
        Object {
          "tag": "FromListItem",
          "values": Array [
            Object {
              "tag": "QualifiedIdentifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "jobs",
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql from select (SELECT * FROM (SELECT * FROM jobs2) as jobs1): from select 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "From",
      "values": Array [
        Object {
          "tag": "FromListItem",
          "values": Array [
            Object {
              "tag": "Select",
              "values": Array [
                Object {
                  "tag": "SelectList",
                  "values": Array [
                    Object {
                      "tag": "Item",
                      "values": Array [
                        Object {
                          "tag": "identifier",
                          "value": Array [
                            Object {
                              "tag": "star",
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "tag": "From",
                  "values": Array [
                    Object {
                      "tag": "FromListItem",
                      "values": Array [
                        Object {
                          "tag": "QualifiedIdentifier",
                          "value": Array [
                            Object {
                              "tag": "Identifier",
                              "value": "jobs2",
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
              ],
            },
            Object {
              "tag": "As",
              "value": Object {
                "tag": "Identifier",
                "value": "jobs1",
              },
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql from select as (SELECT * FROM jobs1, (SELECT * FROM jobs2)): from select as 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "From",
      "values": Array [
        Object {
          "tag": "FromListItem",
          "values": Array [
            Object {
              "tag": "QualifiedIdentifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "jobs1",
                },
              ],
            },
          ],
        },
        Object {
          "tag": "FromListItem",
          "values": Array [
            Object {
              "tag": "Select",
              "values": Array [
                Object {
                  "tag": "SelectList",
                  "values": Array [
                    Object {
                      "tag": "Item",
                      "values": Array [
                        Object {
                          "tag": "identifier",
                          "value": Array [
                            Object {
                              "tag": "star",
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "tag": "From",
                  "values": Array [
                    Object {
                      "tag": "FromListItem",
                      "values": Array [
                        Object {
                          "tag": "QualifiedIdentifier",
                          "value": Array [
                            Object {
                              "tag": "Identifier",
                              "value": "jobs2",
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql from with as (SELECT * FROM jobs AS test): from with as 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "From",
      "values": Array [
        Object {
          "tag": "FromListItem",
          "values": Array [
            Object {
              "tag": "QualifiedIdentifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "jobs",
                },
              ],
            },
            Object {
              "tag": "As",
              "value": Object {
                "tag": "Identifier",
                "value": "test",
              },
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql from with as quoted (SELECT * FROM jobs AS "test 2"): from with as quoted 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "From",
      "values": Array [
        Object {
          "tag": "FromListItem",
          "values": Array [
            Object {
              "tag": "QualifiedIdentifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "jobs",
                },
              ],
            },
            Object {
              "tag": "As",
              "value": Object {
                "tag": "Identifier",
                "value": "test 2",
              },
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql full join (SELECT * FROM jobs FULL JOIN test1): full join 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "From",
      "values": Array [
        Object {
          "tag": "FromListItem",
          "values": Array [
            Object {
              "tag": "QualifiedIdentifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "jobs",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "Join",
      "values": Array [
        Object {
          "tag": "JoinType",
          "value": "FULL",
        },
        Object {
          "tag": "QualifiedIdentifier",
          "value": Array [
            Object {
              "tag": "Identifier",
              "value": "test1",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql full outer join (SELECT * FROM jobs FULL OUTER JOIN test1): full outer join 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "From",
      "values": Array [
        Object {
          "tag": "FromListItem",
          "values": Array [
            Object {
              "tag": "QualifiedIdentifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "jobs",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "Join",
      "values": Array [
        Object {
          "tag": "JoinType",
          "value": "FULL",
        },
        Object {
          "tag": "QualifiedIdentifier",
          "value": Array [
            Object {
              "tag": "Identifier",
              "value": "test1",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql group by (SELECT * FROM table1 GROUP BY col): group by 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "From",
      "values": Array [
        Object {
          "tag": "FromListItem",
          "values": Array [
            Object {
              "tag": "QualifiedIdentifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "table1",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "GroupBy",
      "values": Array [
        Object {
          "tag": "QualifiedIdentifier",
          "value": Array [
            Object {
              "tag": "Identifier",
              "value": "col",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql group by multiple (SELECT * FROM table1 GROUP BY col1, col2): group by multiple 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "From",
      "values": Array [
        Object {
          "tag": "FromListItem",
          "values": Array [
            Object {
              "tag": "QualifiedIdentifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "table1",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "GroupBy",
      "values": Array [
        Object {
          "tag": "QualifiedIdentifier",
          "value": Array [
            Object {
              "tag": "Identifier",
              "value": "col1",
            },
          ],
        },
        Object {
          "tag": "QualifiedIdentifier",
          "value": Array [
            Object {
              "tag": "Identifier",
              "value": "col2",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql inner join (SELECT * FROM jobs INNER JOIN test1): inner join 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "From",
      "values": Array [
        Object {
          "tag": "FromListItem",
          "values": Array [
            Object {
              "tag": "QualifiedIdentifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "jobs",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "Join",
      "values": Array [
        Object {
          "tag": "JoinType",
          "value": undefined,
        },
        Object {
          "tag": "QualifiedIdentifier",
          "value": Array [
            Object {
              "tag": "Identifier",
              "value": "test1",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql intersect (SELECT * FROM table1 INTERSECT SELECT * FROM table2): intersect 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "From",
      "values": Array [
        Object {
          "tag": "FromListItem",
          "values": Array [
            Object {
              "tag": "QualifiedIdentifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "table1",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "INTERSECT",
      "values": Array [
        Object {
          "tag": "SelectList",
          "values": Array [
            Object {
              "tag": "Item",
              "values": Array [
                Object {
                  "tag": "identifier",
                  "value": Array [
                    Object {
                      "tag": "star",
                    },
                  ],
                },
              ],
            },
          ],
        },
        Object {
          "tag": "From",
          "values": Array [
            Object {
              "tag": "FromListItem",
              "values": Array [
                Object {
                  "tag": "QualifiedIdentifier",
                  "value": Array [
                    Object {
                      "tag": "Identifier",
                      "value": "table2",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql join (SELECT * FROM jobs JOIN test1): join 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "From",
      "values": Array [
        Object {
          "tag": "FromListItem",
          "values": Array [
            Object {
              "tag": "QualifiedIdentifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "jobs",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "Join",
      "values": Array [
        Object {
          "tag": "JoinType",
          "value": undefined,
        },
        Object {
          "tag": "QualifiedIdentifier",
          "value": Array [
            Object {
              "tag": "Identifier",
              "value": "test1",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql join on (SELECT * FROM jobs JOIN test1 ON jobs.id = test1.id): join on 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "From",
      "values": Array [
        Object {
          "tag": "FromListItem",
          "values": Array [
            Object {
              "tag": "QualifiedIdentifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "jobs",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "Join",
      "values": Array [
        Object {
          "tag": "JoinType",
          "value": undefined,
        },
        Object {
          "tag": "QualifiedIdentifier",
          "value": Array [
            Object {
              "tag": "Identifier",
              "value": "test1",
            },
          ],
        },
        Object {
          "tag": "JoinOn",
          "value": Object {
            "left": Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "jobs",
                },
                Object {
                  "tag": "Identifier",
                  "value": "id",
                },
              ],
            },
            "operator": Object {
              "type": "Operator",
              "value": "=",
            },
            "right": Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "test1",
                },
                Object {
                  "tag": "Identifier",
                  "value": "id",
                },
              ],
            },
            "type": "BinaryExpression",
          },
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql left join (SELECT * FROM jobs LEFT JOIN test1): left join 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "From",
      "values": Array [
        Object {
          "tag": "FromListItem",
          "values": Array [
            Object {
              "tag": "QualifiedIdentifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "jobs",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "Join",
      "values": Array [
        Object {
          "tag": "JoinType",
          "value": "LEFT",
        },
        Object {
          "tag": "QualifiedIdentifier",
          "value": Array [
            Object {
              "tag": "Identifier",
              "value": "test1",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql left outer join (SELECT * FROM jobs LEFT OUTER JOIN test1): left outer join 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "From",
      "values": Array [
        Object {
          "tag": "FromListItem",
          "values": Array [
            Object {
              "tag": "QualifiedIdentifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "jobs",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "Join",
      "values": Array [
        Object {
          "tag": "JoinType",
          "value": "LEFT",
        },
        Object {
          "tag": "QualifiedIdentifier",
          "value": Array [
            Object {
              "tag": "Identifier",
              "value": "test1",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql limit (SELECT * LIMIT 10): limit 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "Limit",
      "value": Object {
        "tag": "Count",
        "value": "10",
      },
    },
  ],
}
`;

exports[`Sql Should parse simple sql limit offset (SELECT * LIMIT 10 OFFSET 10): limit offset 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "Limit",
      "value": Object {
        "tag": "Count",
        "value": "10",
      },
    },
    Object {
      "tag": "Offset",
      "value": Object {
        "tag": "Count",
        "value": "10",
      },
    },
  ],
}
`;

exports[`Sql Should parse simple sql multiple as columns select (SELECT column1 as "test", table1.column2, "test".column2 as col1): multiple as columns select 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "column1",
                },
              ],
            },
            Object {
              "tag": "As",
              "value": Object {
                "tag": "Identifier",
                "value": "test",
              },
            },
          ],
        },
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "table1",
                },
                Object {
                  "tag": "Identifier",
                  "value": "column2",
                },
              ],
            },
          ],
        },
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "test",
                },
                Object {
                  "tag": "Identifier",
                  "value": "column2",
                },
              ],
            },
            Object {
              "tag": "As",
              "value": Object {
                "tag": "Identifier",
                "value": "col1",
              },
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql multiple columns select (SELECT column1, column2): multiple columns select 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "column1",
                },
              ],
            },
          ],
        },
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "column2",
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql multiple from (SELECT * FROM jobs1, jobs AS "test 2"): multiple from 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "From",
      "values": Array [
        Object {
          "tag": "FromListItem",
          "values": Array [
            Object {
              "tag": "QualifiedIdentifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "jobs1",
                },
              ],
            },
          ],
        },
        Object {
          "tag": "FromListItem",
          "values": Array [
            Object {
              "tag": "QualifiedIdentifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "jobs",
                },
              ],
            },
            Object {
              "tag": "As",
              "value": Object {
                "tag": "Identifier",
                "value": "test 2",
              },
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql multiple from as (SELECT * FROM jobs1 AS j1, jobs2, jobs3 as j3): multiple from as 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "From",
      "values": Array [
        Object {
          "tag": "FromListItem",
          "values": Array [
            Object {
              "tag": "QualifiedIdentifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "jobs1",
                },
              ],
            },
            Object {
              "tag": "As",
              "value": Object {
                "tag": "Identifier",
                "value": "j1",
              },
            },
          ],
        },
        Object {
          "tag": "FromListItem",
          "values": Array [
            Object {
              "tag": "QualifiedIdentifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "jobs2",
                },
              ],
            },
          ],
        },
        Object {
          "tag": "FromListItem",
          "values": Array [
            Object {
              "tag": "QualifiedIdentifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "jobs3",
                },
              ],
            },
            Object {
              "tag": "As",
              "value": Object {
                "tag": "Identifier",
                "value": "j3",
              },
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql multiple joins (SELECT * FROM jobs JOIN test1 JOIN test2): multiple joins 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "From",
      "values": Array [
        Object {
          "tag": "FromListItem",
          "values": Array [
            Object {
              "tag": "QualifiedIdentifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "jobs",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "Join",
      "values": Array [
        Object {
          "tag": "JoinType",
          "value": undefined,
        },
        Object {
          "tag": "QualifiedIdentifier",
          "value": Array [
            Object {
              "tag": "Identifier",
              "value": "test1",
            },
          ],
        },
      ],
    },
    Object {
      "tag": "Join",
      "values": Array [
        Object {
          "tag": "JoinType",
          "value": undefined,
        },
        Object {
          "tag": "QualifiedIdentifier",
          "value": Array [
            Object {
              "tag": "Identifier",
              "value": "test2",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql nested select (SELECT test, (SELECT id FROM table2 LIMIT 1) FROM table1): nested select 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "test",
                },
              ],
            },
          ],
        },
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "Select",
              "values": Array [
                Object {
                  "tag": "SelectList",
                  "values": Array [
                    Object {
                      "tag": "Item",
                      "values": Array [
                        Object {
                          "tag": "identifier",
                          "value": Array [
                            Object {
                              "tag": "Identifier",
                              "value": "id",
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "tag": "From",
                  "values": Array [
                    Object {
                      "tag": "FromListItem",
                      "values": Array [
                        Object {
                          "tag": "QualifiedIdentifier",
                          "value": Array [
                            Object {
                              "tag": "Identifier",
                              "value": "table2",
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "tag": "Limit",
                  "value": Object {
                    "tag": "Count",
                    "value": "1",
                  },
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "From",
      "values": Array [
        Object {
          "tag": "FromListItem",
          "values": Array [
            Object {
              "tag": "QualifiedIdentifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "table1",
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql offset (SELECT * OFFSET 10): offset 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "Offset",
      "value": Object {
        "tag": "Count",
        "value": "10",
      },
    },
  ],
}
`;

exports[`Sql Should parse simple sql order by (SELECT * FROM table1 ORDER BY col ASC): order by 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "From",
      "values": Array [
        Object {
          "tag": "FromListItem",
          "values": Array [
            Object {
              "tag": "QualifiedIdentifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "table1",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "OrderBy",
      "values": Array [
        Object {
          "tag": "OrderByItem",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "col",
                },
              ],
            },
            Object {
              "tag": "OrderDirection",
              "value": "ASC",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql order by multiple (SELECT * FROM table1 ORDER BY col1 ASC, col2): order by multiple 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "From",
      "values": Array [
        Object {
          "tag": "FromListItem",
          "values": Array [
            Object {
              "tag": "QualifiedIdentifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "table1",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "OrderBy",
      "values": Array [
        Object {
          "tag": "OrderByItem",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "col1",
                },
              ],
            },
            Object {
              "tag": "OrderDirection",
              "value": "ASC",
            },
          ],
        },
        Object {
          "tag": "OrderByItem",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "col2",
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql pg cast column to int (SELECT test::int FROM table1): pg cast column to int 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "pg_cast",
              "type": Object {
                "tag": "type",
                "value": "int",
              },
              "value": Object {
                "tag": "identifier",
                "value": Array [
                  Object {
                    "tag": "Identifier",
                    "value": "test",
                  },
                ],
              },
            },
          ],
        },
      ],
    },
    Object {
      "tag": "From",
      "values": Array [
        Object {
          "tag": "FromListItem",
          "values": Array [
            Object {
              "tag": "QualifiedIdentifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "table1",
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql pg cast nested select (SELECT test::date, (SELECT id FROM table2 LIMIT 1)::int FROM table1): pg cast nested select 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "pg_cast",
              "type": Object {
                "tag": "type",
                "value": "date",
              },
              "value": Object {
                "tag": "identifier",
                "value": Array [
                  Object {
                    "tag": "Identifier",
                    "value": "test",
                  },
                ],
              },
            },
          ],
        },
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "pg_cast",
              "type": Object {
                "tag": "type",
                "value": "int",
              },
              "value": Object {
                "tag": "Select",
                "values": Array [
                  Object {
                    "tag": "SelectList",
                    "values": Array [
                      Object {
                        "tag": "Item",
                        "values": Array [
                          Object {
                            "tag": "identifier",
                            "value": Array [
                              Object {
                                "tag": "Identifier",
                                "value": "id",
                              },
                            ],
                          },
                        ],
                      },
                    ],
                  },
                  Object {
                    "tag": "From",
                    "values": Array [
                      Object {
                        "tag": "FromListItem",
                        "values": Array [
                          Object {
                            "tag": "QualifiedIdentifier",
                            "value": Array [
                              Object {
                                "tag": "Identifier",
                                "value": "table2",
                              },
                            ],
                          },
                        ],
                      },
                    ],
                  },
                  Object {
                    "tag": "Limit",
                    "value": Object {
                      "tag": "Count",
                      "value": "1",
                    },
                  },
                ],
              },
            },
          ],
        },
      ],
    },
    Object {
      "tag": "From",
      "values": Array [
        Object {
          "tag": "FromListItem",
          "values": Array [
            Object {
              "tag": "QualifiedIdentifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "table1",
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql pg cast string to date (SELECT '2016-01-01'::date FROM table1): pg cast string to date 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "pg_cast",
              "type": Object {
                "tag": "type",
                "value": "date",
              },
              "value": Object {
                "tag": "String",
                "value": "2016-01-01",
              },
            },
          ],
        },
      ],
    },
    Object {
      "tag": "From",
      "values": Array [
        Object {
          "tag": "FromListItem",
          "values": Array [
            Object {
              "tag": "QualifiedIdentifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "table1",
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql qualified column select (SELECT table.column): qualified column select 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "table",
                },
                Object {
                  "tag": "Identifier",
                  "value": "column",
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql qualified star select (SELECT table.*): qualified star select 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "table",
                },
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql quoted as select (SELECT table.column as "col 1"): quoted as select 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "table",
                },
                Object {
                  "tag": "Identifier",
                  "value": "column",
                },
              ],
            },
            Object {
              "tag": "As",
              "value": Object {
                "tag": "Identifier",
                "value": "col 1",
              },
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql quoted escaped as select (SELECT schema.table.column as "col ""2"""): quoted escaped as select 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "schema",
                },
                Object {
                  "tag": "Identifier",
                  "value": "table",
                },
                Object {
                  "tag": "Identifier",
                  "value": "column",
                },
              ],
            },
            Object {
              "tag": "As",
              "value": Object {
                "tag": "Identifier",
                "value": "col \\"\\"2\\"\\"",
              },
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql quoted identifier (SELECT "test"): quoted identifier 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "test",
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql quoted identifier escaped (SELECT "test me ""o donald"" true"): quoted identifier escaped 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "test me \\"\\"o donald\\"\\" true",
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql quoted star select (SELECT "table 2".*): quoted star select 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "table 2",
                },
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql right join (SELECT * FROM jobs RIGHT JOIN test1): right join 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "From",
      "values": Array [
        Object {
          "tag": "FromListItem",
          "values": Array [
            Object {
              "tag": "QualifiedIdentifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "jobs",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "Join",
      "values": Array [
        Object {
          "tag": "JoinType",
          "value": "RIGHT",
        },
        Object {
          "tag": "QualifiedIdentifier",
          "value": Array [
            Object {
              "tag": "Identifier",
              "value": "test1",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql right outer join (SELECT * FROM jobs RIGHT OUTER JOIN test1): right outer join 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "From",
      "values": Array [
        Object {
          "tag": "FromListItem",
          "values": Array [
            Object {
              "tag": "QualifiedIdentifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "jobs",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "Join",
      "values": Array [
        Object {
          "tag": "JoinType",
          "value": "RIGHT",
        },
        Object {
          "tag": "QualifiedIdentifier",
          "value": Array [
            Object {
              "tag": "Identifier",
              "value": "test1",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql star select (SELECT *): star select 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql union (SELECT * FROM table1 UNION SELECT * FROM table2): union 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "From",
      "values": Array [
        Object {
          "tag": "FromListItem",
          "values": Array [
            Object {
              "tag": "QualifiedIdentifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "table1",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "UNION",
      "values": Array [
        Object {
          "tag": "SelectList",
          "values": Array [
            Object {
              "tag": "Item",
              "values": Array [
                Object {
                  "tag": "identifier",
                  "value": Array [
                    Object {
                      "tag": "star",
                    },
                  ],
                },
              ],
            },
          ],
        },
        Object {
          "tag": "From",
          "values": Array [
            Object {
              "tag": "FromListItem",
              "values": Array [
                Object {
                  "tag": "QualifiedIdentifier",
                  "value": Array [
                    Object {
                      "tag": "Identifier",
                      "value": "table2",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql where (SELECT * WHERE id = 5): where 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "Where",
      "values": Array [
        Object {
          "left": Object {
            "tag": "identifier",
            "value": Array [
              Object {
                "tag": "Identifier",
                "value": "id",
              },
            ],
          },
          "operator": Object {
            "type": "Operator",
            "value": "=",
          },
          "right": Object {
            "tag": "Number",
            "value": "5",
          },
          "type": "BinaryExpression",
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql where and (SELECT * WHERE id = 5 AND name = 'test'): where and 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "Where",
      "values": Array [
        Object {
          "left": Object {
            "left": Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "id",
                },
              ],
            },
            "operator": Object {
              "type": "Operator",
              "value": "=",
            },
            "right": Object {
              "tag": "Number",
              "value": "5",
            },
            "type": "BinaryExpression",
          },
          "operator": Object {
            "type": "Operator",
            "value": "AND",
          },
          "right": Object {
            "left": Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "name",
                },
              ],
            },
            "operator": Object {
              "type": "Operator",
              "value": "=",
            },
            "right": Object {
              "tag": "String",
              "value": "test",
            },
            "type": "BinaryExpression",
          },
          "type": "BinaryExpression",
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql where boolean (SELECT * WHERE id = 5 AND TRUE): where boolean 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "Where",
      "values": Array [
        Object {
          "left": Object {
            "left": Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "Identifier",
                  "value": "id",
                },
              ],
            },
            "operator": Object {
              "type": "Operator",
              "value": "=",
            },
            "right": Object {
              "tag": "Number",
              "value": "5",
            },
            "type": "BinaryExpression",
          },
          "operator": Object {
            "type": "Operator",
            "value": "AND",
          },
          "right": Object {
            "tag": "Boolean",
            "value": "TRUE",
          },
          "type": "BinaryExpression",
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql where different from (SELECT * WHERE table.col <> '23'): where different from 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "Where",
      "values": Array [
        Object {
          "left": Object {
            "tag": "identifier",
            "value": Array [
              Object {
                "tag": "Identifier",
                "value": "table",
              },
              Object {
                "tag": "Identifier",
                "value": "col",
              },
            ],
          },
          "operator": Object {
            "type": "Operator",
            "value": "<>",
          },
          "right": Object {
            "tag": "String",
            "value": "23",
          },
          "type": "BinaryExpression",
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql where greater than (SELECT * WHERE table.col > 2): where greater than 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "Where",
      "values": Array [
        Object {
          "left": Object {
            "tag": "identifier",
            "value": Array [
              Object {
                "tag": "Identifier",
                "value": "table",
              },
              Object {
                "tag": "Identifier",
                "value": "col",
              },
            ],
          },
          "operator": Object {
            "type": "Operator",
            "value": ">",
          },
          "right": Object {
            "tag": "Number",
            "value": "2",
          },
          "type": "BinaryExpression",
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql where greater than or equal (SELECT * WHERE table.col >= 23): where greater than or equal 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "Where",
      "values": Array [
        Object {
          "left": Object {
            "tag": "identifier",
            "value": Array [
              Object {
                "tag": "Identifier",
                "value": "table",
              },
              Object {
                "tag": "Identifier",
                "value": "col",
              },
            ],
          },
          "operator": Object {
            "type": "Operator",
            "value": ">=",
          },
          "right": Object {
            "tag": "Number",
            "value": "23",
          },
          "type": "BinaryExpression",
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql where less than (SELECT * WHERE table.col < 2): where less than 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "Where",
      "values": Array [
        Object {
          "left": Object {
            "tag": "identifier",
            "value": Array [
              Object {
                "tag": "Identifier",
                "value": "table",
              },
              Object {
                "tag": "Identifier",
                "value": "col",
              },
            ],
          },
          "operator": Object {
            "type": "Operator",
            "value": "<",
          },
          "right": Object {
            "tag": "Number",
            "value": "2",
          },
          "type": "BinaryExpression",
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql where less than or equal (SELECT * WHERE table.col <= '23'): where less than or equal 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "Where",
      "values": Array [
        Object {
          "left": Object {
            "tag": "identifier",
            "value": Array [
              Object {
                "tag": "Identifier",
                "value": "table",
              },
              Object {
                "tag": "Identifier",
                "value": "col",
              },
            ],
          },
          "operator": Object {
            "type": "Operator",
            "value": "<=",
          },
          "right": Object {
            "tag": "String",
            "value": "23",
          },
          "type": "BinaryExpression",
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql where like string (SELECT * WHERE table.col LIKE '%23%'): where like string 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "Where",
      "values": Array [
        Object {
          "left": Object {
            "tag": "identifier",
            "value": Array [
              Object {
                "tag": "Identifier",
                "value": "table",
              },
              Object {
                "tag": "Identifier",
                "value": "col",
              },
            ],
          },
          "operator": Object {
            "type": "Operator",
            "value": "LIKE",
          },
          "right": Object {
            "tag": "String",
            "value": "%23%",
          },
          "type": "BinaryExpression",
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql where not equal to (SELECT * WHERE table.col != '23'): where not equal to 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "Where",
      "values": Array [
        Object {
          "left": Object {
            "tag": "identifier",
            "value": Array [
              Object {
                "tag": "Identifier",
                "value": "table",
              },
              Object {
                "tag": "Identifier",
                "value": "col",
              },
            ],
          },
          "operator": Object {
            "type": "Operator",
            "value": "!=",
          },
          "right": Object {
            "tag": "String",
            "value": "23",
          },
          "type": "BinaryExpression",
        },
      ],
    },
  ],
}
`;

exports[`Sql Should parse simple sql where select (SELECT * WHERE (SELECT id FROM test LIMIT 1) = 5): where select 1`] = `
Object {
  "tag": "Select",
  "values": Array [
    Object {
      "tag": "SelectList",
      "values": Array [
        Object {
          "tag": "Item",
          "values": Array [
            Object {
              "tag": "identifier",
              "value": Array [
                Object {
                  "tag": "star",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "tag": "Where",
      "values": Array [
        Object {
          "left": Object {
            "tag": "Select",
            "values": Array [
              Object {
                "tag": "SelectList",
                "values": Array [
                  Object {
                    "tag": "Item",
                    "values": Array [
                      Object {
                        "tag": "identifier",
                        "value": Array [
                          Object {
                            "tag": "Identifier",
                            "value": "id",
                          },
                        ],
                      },
                    ],
                  },
                ],
              },
              Object {
                "tag": "From",
                "values": Array [
                  Object {
                    "tag": "FromListItem",
                    "values": Array [
                      Object {
                        "tag": "QualifiedIdentifier",
                        "value": Array [
                          Object {
                            "tag": "Identifier",
                            "value": "test",
                          },
                        ],
                      },
                    ],
                  },
                ],
              },
              Object {
                "tag": "Limit",
                "value": Object {
                  "tag": "Count",
                  "value": "1",
                },
              },
            ],
          },
          "operator": Object {
            "type": "Operator",
            "value": "=",
          },
          "right": Object {
            "tag": "Number",
            "value": "5",
          },
          "type": "BinaryExpression",
        },
      ],
    },
  ],
}
`;
